<resources>


<!--    <string name="app_name">پسماند خشک نگرا - سبززیور</string>-->
    <string name="app_name">پسماند خشک نگرا - انباردار</string>


    <string name="UpdateAppName">Samtam_WarehouseKeeper</string>


    <string name="NetworkError">خطای ارتباط با سرور</string>
    <string name="PleaseTryAgain">تلاش دوباره کنید</string>
    <string name="Ignore">بستن</string>
    <string name="mobileNumber">تلفن همراه</string>
    <string name="password">رمز ورود</string>
    <string name="logIn">ورود به برنامه</string>
    <string name="emptyPhoneNumber">شماره موبایل را بصورت صحیح وارد نمایید</string>
    <string name="emptyPassword">رمز ورود را وارد نمایید</string>
    <string name="installApp">نصب برنامه</string>
    <string name="pleaseWait">شکیبا باشید ...</string>
    <string name="DownloadingFile">بارگیری فایل ...</string>
    <string name="FileDownloaded">پایان بارگیری فایل</string>
    <string name="InstallApp">نصب بروزرسانی برنامه</string>
    <string name="Filtering">مرتب سازی</string>
    <string name="WasteCollectionStateOnProgress">ارسال</string>
    <string name="WasteCollectionStateNoDelivery">تحویل داده نشده</string>
    <string name="WasteCollectionStateDelivered">تحویل داده شده</string>
    <string name="WasteCollectionStateLading">در حال بارگیری</string>
    <string name="Amount">مقدار :</string>
    <string name="User">کاربر : </string>
    <string name="RequestCode">شماره درخواست : </string>
    <string name="DateTime">تاریخ : </string>
    <string name="Address">آدرس :</string>
    <string name="DetailRequest">نمایش جزییات</string>
    <string name="FailureDeliver">عدم دریافت</string>
    <string name="Deliver">تحویل</string>
    <string name="SendUserVerifyCode">ارسال کد تایید</string>
    <string name="ElapsedTimeGetSMS">زمان باقی مانده\n برای دریافت پیامک</string>
    <string name="InputUserCode">کد ارسال شده برای تحویل دهنده بار را در کادر زیر وارد نمایید</string>
    <string name="VerifyUserCode">تایید کد</string>
    <string name="PleaseWait">درحال برقراری ارتباط ...</string>
    <string name="Cancel">انصراف</string>
    <string name="ReTryGetSMS">دریافت دوباره\n پیامک</string>
    <string name="KGr">کیلو</string>
    <string name="Delivered">دریافت شد</string>

    <string name="ML_SharePreferences">sharePreferences</string>
    <string name="ML_AccessToken">accessToken</string>
    <string name="ML_Expires">expires</string>
    <string name="ML_RefreshToken">refreshToken</string>
    <string name="ML_PhoneNumber">phoneNumber</string>
    <string name="ML_Password">password</string>
    <string name="ML_TokenType">tokenType</string>
    <string name="ML_ExpireSin">expireSin</string>
    <string name="ML_ClientId">clientId</string>
    <string name="ML_Issued">issued</string>
    <string name="ML_CompleteProfile">completeProfile</string>
    <string name="ML_Name">Name</string>
    <string name="ML_lastName">LastName</string>
    <string name="ML_Gender">Gender</string>
    <string name="ML_AddressCompleted">AddressCompleted</string>
    <string name="ML_UpdateUrl">UpdateUrl</string>
    <string name="ML_UpdateFile">UpdateFile</string>
    <string name="ML_RequestCode">RequestCode</string>




</resources>