<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LinearLayoutWasteSorting"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dw_back_item_ticket"
    android:padding="@dimen/_4sdp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/LinearLayoutWasteCollectionStateOnProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/Links"
            android:textSize="@dimen/_10sdp"
            android:text="@string/WasteCollectionStateOnProgress"
            android:gravity="right"/>

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:src="@drawable/svg_share"
            app:tint="@color/Links" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginBottom="@dimen/_3sdp"
        android:background="@color/mlMenuBack"/>



    <LinearLayout
        android:id="@+id/LinearLayoutWasteCollectionStateNoDelivery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/mlTextRegisterCode"
            android:textSize="@dimen/_10sdp"
            android:text="@string/WasteCollectionStateNoDelivery"
            android:gravity="right"/>

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:src="@drawable/svg_not_delivery"
            android:padding="@dimen/_2sdp"
            app:tint="@color/mlTextRegisterCode" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginBottom="@dimen/_3sdp"
        android:background="@color/mlMenuBack"/>


    <LinearLayout
        android:id="@+id/LinearLayoutWasteCollectionStateDelivered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/mlCollectLeft1"
            android:textSize="@dimen/_10sdp"
            android:text="@string/WasteCollectionStateDelivered"
            android:gravity="right"/>

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:src="@drawable/svg_package_delivered"
            app:tint="@color/mlCollectLeft1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginBottom="@dimen/_3sdp"
        android:background="@color/mlMenuBack"/>



    <LinearLayout
        android:id="@+id/LinearLayoutWasteCollectionStateLading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryVeryDark"
            android:textSize="@dimen/_10sdp"
            android:text="@string/WasteCollectionStateLading"
            android:gravity="right"/>

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:src="@drawable/svg_lading"
            app:tint="@color/colorPrimaryVeryDark" />

    </LinearLayout>


</LinearLayout>