<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="wastRequest"
            type="ir.ngra.warehousekeeper.model.MD_WasteRequest" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:layout_margin="@dimen/_5sdp"
        android:background="@drawable/layout_item_orders"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:visibility="gone"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_10sdp"
                android:gravity="right"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_5sdp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_10sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:background="@drawable/kg_item_recycler"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_10sdp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_10sdp"
                android:text="@string/Amount"
                fontPath="font/iransans_web_medium.ttf"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >


            <ImageView
                android:id="@+id/ImageViewCall"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/svg_call"
                app:tint="@color/colorSuccess" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_10sdp"
                android:text="@{wastRequest.citizen.buildingUse}"
                android:gravity="right"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_10sdp"
                android:text="@{wastRequest.userFullName}"
                android:gravity="right"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_10sdp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_10sdp"
                android:text="@string/User"
                fontPath="font/iransans_web_medium.ttf"
                />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >


            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_10sdp"
                android:text="@{wastRequest.requestCode}"
                android:gravity="right"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_10sdp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_10sdp"
                android:text="@string/RequestCode"
                fontPath="font/iransans_web_medium.ttf"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >


            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_10sdp"
                android:gravity="right"
                app:SetJalaliDate="@{wastRequest.deliverDate}"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_10sdp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_10sdp"
                android:text="@string/DateTime"
                fontPath="font/iransans_web_medium.ttf"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <ImageView
                android:id="@+id/ImageViewMap"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/svg_user_address"
                app:tint="@color/mlCollectRight1" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_10sdp"
                android:text="@{wastRequest.address}"
                android:gravity="right"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_10sdp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_10sdp"
                android:text="@string/Address"
                fontPath="font/iransans_web_medium.ttf"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal"
            android:gravity="right"
            app:SetLayoutActionOrder="@{wastRequest.wasteCollectionState}">


            <LinearLayout
                android:id="@+id/LinearLayoutNotDeliver"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:background="@drawable/button_red"
                android:orientation="horizontal"
                android:layout_marginRight="@dimen/_20sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/_9sdp"
                    android:text="@string/FailureDeliver"
                    fontPath="font/iransans_web_medium.ttf"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"/>

                <ImageView
                    android:id="@+id/ImageViewNotDeliver"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/svg_not_delivery"
                    app:tint="@color/colorWhite" />

                <com.cunoraz.gifview.library.GifView
                    android:id="@+id/gifNotDeliver"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="@dimen/_2sdp"
                    android:visibility="gone"
                    custom:gif="@drawable/loading2" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayoutDetail"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:background="@drawable/button_dark_blue"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/_9sdp"
                    android:text="@string/DetailRequest"
                    fontPath="font/iransans_web_medium.ttf"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"/>

                <ImageView
                    android:id="@+id/ImageViewDetail"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/svg_file"
                    app:tint="@color/colorWhite" />

                <com.cunoraz.gifview.library.GifView
                    android:id="@+id/gifDetail"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="@dimen/_2sdp"
                    android:visibility="gone"
                    custom:gif="@drawable/loading2" />

            </LinearLayout>



        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical|right"
            android:layout_marginTop="@dimen/_2sdp"
            android:visibility="gone"
            >


            <LinearLayout
                android:id="@+id/LinearLayoutDeliver"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:background="@drawable/button_deliver"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_5sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/_9sdp"
                    android:text="@string/Deliver"
                    fontPath="font/iransans_web_medium.ttf"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"/>

                <ImageView
                    android:id="@+id/ImageViewDeliver"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:src="@drawable/svg_truck_deliver"
                    app:tint="@color/colorWhite" />

                <com.cunoraz.gifview.library.GifView
                    android:id="@+id/gifDeliver"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="@dimen/_2sdp"
                    android:visibility="gone"
                    custom:gif="@drawable/loading2" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorWhite"
            android:layout_marginTop="@dimen/_4sdp"/>


        <TextView
            fontPath="font/iransans_web_medium.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:textSize="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:gravity="center"
            android:text="تخویل"
            app:SetStateOrder="@{wastRequest.wasteCollectionState}"
            />


    </LinearLayout>

</layout>
